Clipping issue fixed on iP6/7/8

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ body {
   flex-direction: column;
   text-align: center;
   height: 12rem; 
-  width: 19rem;
+  width: 17rem;
 }
 
 .landing-image-size {
